--- a/sources/Tests.LiteRepository.Database.SqlServer/App.config
+++ b/sources/Tests.LiteRepository.Database.SqlServer/App.config
@@ -3,5 +3,12 @@
 <configuration>
   <appSettings>
     <add key="xunit.methodDisplay" value="method"/>
-  </appSettings>
+
+  </appSettings>    
+  <connectionStrings>
+      <clear />
+      <add name="DemoDb"
+       providerName="System.Data.SqlClient"
+       connectionString="Data Source=(localdb)\MSSQLLocalDb;Initial Catalog=SqlServer.LiteRepository;Integrated Security=True;Pooling=False" />
+    </connectionStrings>
 </configuration>
