--- a/sources/LiteRepository.Database.SqlServer/LiteRepository.Database.SqlServer.nuspec
+++ b/sources/LiteRepository.Database.SqlServer/LiteRepository.Database.SqlServer.nuspec
@@ -3,11 +3,15 @@
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>LiteRepository Sql Server</title>
+    <title>LiteRepository SqlServer support</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
+    <summary>LiteRepository SqlServer support</summary>
     <copyright>Copyright © 2016, $author$</copyright>
+    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
+    <projectUrl>https://github.com/albertakhmetov/LiteRepository</projectUrl>
+    <tags>Dapper Repository RepositoryPattern .NET SqlServer</tags>
   </metadata>
 </package>
