--- a/sources/Tests.LiteRepository/App.config
+++ b/sources/Tests.LiteRepository/App.config
@@ -4,4 +4,10 @@
   <appSettings>
     <add key="xunit.methodDisplay" value="method"/>
   </appSettings>
+  <connectionStrings>
+    <clear />
+    <add name="DemoDb"
+     providerName="System.Data.SqlClient"
+     connectionString="Data Source=(localdb)\MSSQLLocalDb;Initial Catalog=SqlServer.LiteRepository;Integrated Security=True;Pooling=False" />
+  </connectionStrings>
 </configuration>
