--- a/sources/LiteRepository/LiteRepository.nuspec
+++ b/sources/LiteRepository/LiteRepository.nuspec
@@ -12,7 +12,7 @@
     <copyright>Copyright © 2016, $author$</copyright>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>https://github.com/albertakhmetov/LiteRepository</projectUrl>
-    <tags>Dapper Repository RepositoryPattern .NET</tags>
+    <tags>Dapper Repository RepositoryPattern .NET SqlServer CRUD ORM</tags>
     <releaseNotes>Support for SqlServer was integrated into main package</releaseNotes>
   </metadata>
 </package>
