--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Database\ISqlGenerator.cs" />
     <Compile Include="Database\PrimaryKeyAttribute.cs" />
     <Compile Include="Database\SqlServerGenerator.cs" />
+    <Compile Include="Database\StorageProcedureSqlGenerator.cs" />
     <Compile Include="Database\StoreAsAttribute.cs" />
     <Compile Include="DataRepository.cs" />
     <Compile Include="DataRepositoryException.cs" />
