--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -72,24 +72,27 @@
     <Compile Include="Database\SqlServerGenerator.cs" />
     <Compile Include="Database\StorageProcedureSqlGenerator.cs" />
     <Compile Include="Database\StoreAsAttribute.cs" />
-    <Compile Include="DataRepository.cs" />
-    <Compile Include="DataRepositoryException.cs" />
-    <Compile Include="IDataRepository.cs" />
+    <Compile Include="IDb.cs" />
+    <Compile Include="IObservableRepository.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Attributes\SqlAlias.cs" />
-    <Compile Include="Sql\Attributes\SqlKey.cs" />
     <Compile Include="Sql\Attributes\SqlIgnore.cs" />
-    <Compile Include="Sql\Commands\SqlCount.cs" />
+    <Compile Include="Sql\Attributes\SqlKey.cs" />
+    <Compile Include="Sql\Commands\SqlCommandBase.cs" />
+    <Compile Include="Sql\Commands\SqlGetCount.cs" />
     <Compile Include="Sql\Commands\SqlDelete.cs" />
     <Compile Include="Sql\Commands\SqlGet.cs" />
-    <Compile Include="Sql\Commands\SqlUpdate.cs" />
-    <Compile Include="Sql\Commands\SqlCommandBase.cs" />
-    <Compile Include="Sql\SqlBuilder.cs" />
     <Compile Include="Sql\Commands\SqlInsert.cs" />
+    <Compile Include="Sql\Commands\SqlUpdate.cs" />
+    <Compile Include="Sql\ISqlBuilder.cs" />
+    <Compile Include="Sql\SqlBuilder.cs" />
     <Compile Include="Sql\SqlMetadata.cs" />
+    <Compile Include="Sql\SqlRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Sql\SqlClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
