--- a/sources/LiteRepository/LiteRepository.nuspec
+++ b/sources/LiteRepository/LiteRepository.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
   <metadata>
     <id>$id$</id>
-    <version>$version$</version>
+    <version>$version$-alpha</version>
     <title>LiteRepository</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
