--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -88,8 +88,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sql\Attributes\PrimaryKeyAttributeTests.cs" />
-    <Compile Include="Sql\Attributes\StoreAsAttributeTests.cs" />
+    <Compile Include="Sql\Attributes\SqlAliasAttributeTests.cs" />
     <Compile Include="Sql\Commands\SqlCommandBaseTests.cs" />
     <Compile Include="Sql\Models\Entity.cs" />
     <Compile Include="Sql\SqlMetadataTests.cs" />
