--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -90,7 +90,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Attributes\SqlAliasAttributeTests.cs" />
     <Compile Include="Sql\Commands\SqlCommandBaseTests.cs" />
+    <Compile Include="Sql\Commands\SqlInsertTests.cs" />
     <Compile Include="Sql\Models\Entity.cs" />
+    <Compile Include="Sql\Models\IdentityEntity.cs" />
     <Compile Include="Sql\SqlMetadataTests.cs" />
   </ItemGroup>
   <ItemGroup />
