--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -89,8 +89,12 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Attributes\SqlAliasAttributeTests.cs" />
+    <Compile Include="Sql\Commands\DbMocks.cs" />
     <Compile Include="Sql\Commands\SqlCommandBaseTests.cs" />
+    <Compile Include="Sql\Commands\SqlDeleteTests.cs" />
+    <Compile Include="Sql\Commands\SqlGetTests.cs" />
     <Compile Include="Sql\Commands\SqlInsertTests.cs" />
+    <Compile Include="Sql\Commands\SqlUpdateTests.cs" />
     <Compile Include="Sql\Models\Entity.cs" />
     <Compile Include="Sql\Models\IdentityEntity.cs" />
     <Compile Include="Sql\SqlMetadataTests.cs" />
