implementation of SqlBuilder

--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -98,6 +98,8 @@
     <Compile Include="Sql\Commands\SqlUpdateTests.cs" />
     <Compile Include="Sql\Models\Entity.cs" />
     <Compile Include="Sql\Models\IdentityEntity.cs" />
+    <Compile Include="Sql\SqlBuilder_EntityTests.cs" />
+    <Compile Include="Sql\SqlBuilder_IdentityEntityTests.cs" />
     <Compile Include="Sql\SqlMetadataTests.cs" />
   </ItemGroup>
   <ItemGroup />
