--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -65,10 +65,8 @@
     <Compile Include="Common\Commands\IGetCountCommand.cs" />
     <Compile Include="Common\Commands\IInsertCommand.cs" />
     <Compile Include="Common\Commands\IUpdateCommand.cs" />
-    <Compile Include="IDb.cs" />
-    <Compile Include="IIdentityEntity.cs" />
-    <Compile Include="IObservableRepository.cs" />
-    <Compile Include="IRepository.cs" />
+    <Compile Include="Common\IDb.cs" />
+    <Compile Include="Common\IIdentityEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Attributes\SqlAliasAttribute.cs" />
     <Compile Include="Sql\Attributes\SqlIgnoreAttribute.cs" />
