--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Common\Commands\IUpdateCommand.cs" />
     <Compile Include="Common\IDb.cs" />
     <Compile Include="Common\IIdentityEntity.cs" />
+    <Compile Include="Common\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Attributes\SqlAliasAttribute.cs" />
     <Compile Include="Sql\Attributes\SqlIgnoreAttribute.cs" />
@@ -80,6 +81,7 @@
     <Compile Include="Sql\ISqlBuilder.cs" />
     <Compile Include="Sql\SqlBuilder.cs" />
     <Compile Include="Sql\SqlMetadata.cs" />
+    <Compile Include="Sql\SqlRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
