--- a/sources/LiteRepository/LiteRepository.nuspec
+++ b/sources/LiteRepository/LiteRepository.nuspec
@@ -8,11 +8,11 @@
     <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <summary>There is a lightweight implementation of Repository Pattern based on Dapper ORM. This implementation supports CRUD operations via auto-generated plain SQL (stored procedures haven't been supported yet)</summary>
+    <summary>There is a lightweight implementation of Repository Pattern based on Dapper ORM. This implementation supports CRUD operations via auto-generated plain SQL</summary>
     <copyright>Copyright © 2016, $author$</copyright>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>https://github.com/albertakhmetov/LiteRepository</projectUrl>
     <tags>Dapper Repository RepositoryPattern .NET SqlServer CRUD ORM</tags>
-    <releaseNotes>Support for SqlServer was integrated into main package</releaseNotes>
+    <releaseNotes></releaseNotes>
   </metadata>
 </package>
