--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Common\Commands\IGetCountCommand.cs" />
     <Compile Include="Common\Commands\IInsertCommand.cs" />
     <Compile Include="Common\Commands\IUpdateCommand.cs" />
+    <Compile Include="Common\Db.cs" />
     <Compile Include="Common\IDb.cs" />
     <Compile Include="Common\IIdentityEntity.cs" />
     <Compile Include="Common\IRepository.cs" />
