--- a/sources/Tests.LiteRepository/packages.config
+++ b/sources/Tests.LiteRepository/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="NSubstitute" version="1.9.2.0" targetFramework="net461" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net461" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net461" />
