--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Common\Commands\IInsertCommand.cs" />
     <Compile Include="Common\Commands\IUpdateCommand.cs" />
     <Compile Include="Common\Db.cs" />
+    <Compile Include="Common\Extensions\InExtension.cs" />
     <Compile Include="Common\IDb.cs" />
     <Compile Include="Common\IIdentityEntity.cs" />
     <Compile Include="Common\IRepository.cs" />
@@ -81,6 +82,7 @@
     <Compile Include="Sql\Commands\SqlUpdate.cs" />
     <Compile Include="Sql\ISqlBuilder.cs" />
     <Compile Include="Sql\SqlBuilder.cs" />
+    <Compile Include="Sql\SqlExpression.cs" />
     <Compile Include="Sql\SqlMetadata.cs" />
     <Compile Include="Sql\SqlRepository.cs" />
   </ItemGroup>
