--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -93,6 +93,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Common\DbTests.cs" />
+    <Compile Include="Common\Extensions\InExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sql\Attributes\SqlAliasAttributeTests.cs" />
     <Compile Include="Sql\Commands\DbMocks.cs" />
