--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Sql\SqlBuilder_IdentityEntityTests.cs" />
     <Compile Include="Sql\SqlExpressionTests.cs" />
     <Compile Include="Sql\SqlMetadataTests.cs" />
+    <Compile Include="Sql\SqlOrderTests.cs" />
     <Compile Include="Sql\SqlRepository_EntityTests.cs" />
   </ItemGroup>
   <ItemGroup />
