extended SqlExpression for support Order and Scalar expressions

--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -107,7 +107,9 @@
     <Compile Include="Sql\Models\IdentityEntity.cs" />
     <Compile Include="Sql\SqlBuilder_EntityTests.cs" />
     <Compile Include="Sql\SqlBuilder_IdentityEntityTests.cs" />
-    <Compile Include="Sql\SqlExpressionTests.cs" />
+    <Compile Include="Sql\SqlExpression_OrderTests.cs" />
+    <Compile Include="Sql\SqlExpression_ScalarTests.cs" />
+    <Compile Include="Sql\SqlExpression_WhereTests.cs" />
     <Compile Include="Sql\SqlMetadataTests.cs" />
     <Compile Include="Sql\SqlOrderTests.cs" />
     <Compile Include="Sql\SqlRepository_EntityTests.cs" />
