--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -108,6 +108,7 @@
     <Compile Include="Sql\SqlBuilder_EntityTests.cs" />
     <Compile Include="Sql\SqlBuilder_IdentityEntityTests.cs" />
     <Compile Include="Sql\SqlExpression_Part_Order_Tests.cs" />
+    <Compile Include="Sql\SqlExpression_SelectByKey_Tests.cs" />
     <Compile Include="Sql\SqlExpression_SelectScalar_Tests.cs" />
     <Compile Include="Sql\SqlExpression_Select_Tests.cs" />
     <Compile Include="Sql\SqlExpression_Part_Where_Tests.cs" />
