--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -68,12 +68,12 @@
     <Compile Include="Common\Db.cs" />
     <Compile Include="InExtension.cs" />
     <Compile Include="Common\IDb.cs" />
-    <Compile Include="Common\IIdentityEntity.cs" />
+    <Compile Include="IIdentityEntity.cs" />
     <Compile Include="Common\IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sql\Attributes\SqlAliasAttribute.cs" />
-    <Compile Include="Sql\Attributes\SqlIgnoreAttribute.cs" />
-    <Compile Include="Sql\Attributes\SqlKeyAttribute.cs" />
+    <Compile Include="Attributes\SqlAliasAttribute.cs" />
+    <Compile Include="Attributes\SqlIgnoreAttribute.cs" />
+    <Compile Include="Attributes\SqlKeyAttribute.cs" />
     <Compile Include="Sql\Commands\SqlCommandBase.cs" />
     <Compile Include="Sql\Commands\SqlGetCount.cs" />
     <Compile Include="Sql\Commands\SqlDelete.cs" />
@@ -81,14 +81,13 @@
     <Compile Include="Sql\Commands\SqlInsert.cs" />
     <Compile Include="Sql\Commands\SqlUpdate.cs" />
     <Compile Include="Sql\ISqlBuilder.cs" />
-    <Compile Include="Sql\ISqlDialect.cs" />
-    <Compile Include="Sql\SqlExpression.cs" />
-    <Compile Include="Sql\SqlMetadata.cs" />
+    <Compile Include="ISqlDialect.cs" />
+    <Compile Include="SqlExpression.cs" />
+    <Compile Include="SqlMetadata.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-    <None Include="Sql\SqlDiagram.cd" />
-    <Compile Include="Sql\SqlExpression.Expressions.cs" />
+    <Compile Include="SqlExpression.Expressions.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
