--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -95,7 +95,7 @@
     <Compile Include="Common\DbTests.cs" />
     <Compile Include="InExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Sql\Attributes\SqlAliasAttributeTests.cs" />
+    <Compile Include="Attributes\SqlAliasAttributeTests.cs" />
     <Compile Include="Sql\Commands\DbMocks.cs" />
     <Compile Include="Sql\Commands\SqlCommandBaseTests.cs" />
     <Compile Include="Sql\Commands\SqlDeleteTests.cs" />
@@ -103,17 +103,17 @@
     <Compile Include="Sql\Commands\SqlGetTests.cs" />
     <Compile Include="Sql\Commands\SqlInsertTests.cs" />
     <Compile Include="Sql\Commands\SqlUpdateTests.cs" />
-    <Compile Include="Sql\Models\Entity.cs" />
-    <Compile Include="Sql\Models\IdentityEntity.cs" />
-    <Compile Include="Sql\SqlExpression_Delete_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_Insert_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_Part_Order_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_SelectByKey_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_SelectScalar_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_Select_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_Part_Where_Tests.cs" />
-    <Compile Include="Sql\SqlExpression_Update_Tests.cs" />
-    <Compile Include="Sql\SqlMetadata_Tests.cs" />
+    <Compile Include="Models\Entity.cs" />
+    <Compile Include="Models\IdentityEntity.cs" />
+    <Compile Include="SqlExpression_Delete_Tests.cs" />
+    <Compile Include="SqlExpression_Insert_Tests.cs" />
+    <Compile Include="SqlExpression_Part_Order_Tests.cs" />
+    <Compile Include="SqlExpression_SelectByKey_Tests.cs" />
+    <Compile Include="SqlExpression_SelectScalar_Tests.cs" />
+    <Compile Include="SqlExpression_Select_Tests.cs" />
+    <Compile Include="SqlExpression_Part_Where_Tests.cs" />
+    <Compile Include="SqlExpression_Update_Tests.cs" />
+    <Compile Include="SqlMetadata_Tests.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
