--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Common\Commands\IInsertCommand.cs" />
     <Compile Include="Common\Commands\IUpdateCommand.cs" />
     <Compile Include="Common\Db.cs" />
+    <Compile Include="Db.cs" />
     <Compile Include="InExtension.cs" />
     <Compile Include="Common\IDb.cs" />
     <Compile Include="IIdentityEntity.cs" />
