--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -92,7 +92,8 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
-    <Compile Include="Common\DbTests.cs" />
+    <Compile Include="Db_Connection_Tests.cs" />
+    <Compile Include="Db_Exec_Tests.cs" />
     <Compile Include="InExtensionTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\SqlAliasAttributeTests.cs" />
@@ -115,7 +116,9 @@
     <Compile Include="SqlExpression_Update_Tests.cs" />
     <Compile Include="SqlMetadata_Tests.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Common\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
