implemented: Db.Insert

--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -76,12 +76,13 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Db_Insert_Tests.cs" />
     <Compile Include="Db_Tests.cs" />
     <Compile Include="Db_Exec_Tests.cs" />
-    <Compile Include="InExtensionTests.cs" />
+    <Compile Include="InExtension_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\SqlAliasAttributeTests.cs" />
-    <Compile Include="Sql\Commands\DbMocks.cs" />
+    <Compile Include="DbMocks.cs" />
     <Compile Include="Sql\Commands\SqlCommandBaseTests.cs" />
     <Compile Include="Sql\Commands\SqlDeleteTests.cs" />
     <Compile Include="Sql\Commands\SqlGetCountTests.cs" />
