--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -77,8 +77,9 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Db_Insert_Tests.cs" />
-    <Compile Include="Db_Tests.cs" />
+    <Compile Include="Db_Ctor_Tests.cs" />
     <Compile Include="Db_Exec_Tests.cs" />
+    <Compile Include="Db_Update_Tests.cs" />
     <Compile Include="InExtension_Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\SqlAliasAttributeTests.cs" />
