--- a/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
+++ b/sources/Tests.LiteRepository/Tests.LiteRepository.csproj
@@ -76,6 +76,7 @@
     <Otherwise />
   </Choose>
   <ItemGroup>
+    <Compile Include="Db_Delete_Tests.cs" />
     <Compile Include="Db_Insert_Tests.cs" />
     <Compile Include="Db_Ctor_Tests.cs" />
     <Compile Include="Db_Exec_Tests.cs" />
