added: SqlServerDialect.Select

--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -54,6 +54,7 @@
     <Compile Include="SqlDialectBase.cs" />
     <Compile Include="SqlExpression.cs" />
     <Compile Include="SqlMetadata.cs" />
+    <Compile Include="SqlServer\SqlServerDialect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
