--- a/sources/LiteRepository/LiteRepository.csproj
+++ b/sources/LiteRepository/LiteRepository.csproj
@@ -48,10 +48,12 @@
     <Compile Include="IDb.cs" />
     <Compile Include="InExtension.cs" />
     <Compile Include="Identity.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Attributes\SqlAliasAttribute.cs" />
     <Compile Include="Attributes\SqlIgnoreAttribute.cs" />
     <Compile Include="Attributes\SqlKeyAttribute.cs" />
+    <Compile Include="Repository.cs" />
     <Compile Include="SqlDialectBase.cs" />
     <Compile Include="SqlExpression.cs" />
     <Compile Include="SqlMetadata.cs" />
